# fastapi-project

./: .dockerignore  .gitignore  Dockerfile  mkdocs.yml  pyproject.toml
docs/: er-diagramm.md  index.md  komponentendiagramm.md  schichtenarchitektur.md  use-cases.md
extras/: dependency-check.py
extras/bruno/pirat/GraphQL/Mutation/: Neuer Patient mit ungültigen Daten.yml  Neuer Patient.yml  folder.yml
extras/bruno/pirat/GraphQL/Query/: Suche id, version, ... von Patienten mit Nachnamen.yml  Suche id, version, ... von Patienten mit der Emailadresse.yml  Suche id, version, nachname, ... von allen Patienten.yml  Suche mit nicht-vorhandener Emailadresse.yml
extras/bruno/pirat/REST/Löschen/: Nicht-vorhandenen Patienten 999999 löschen.yml
extras/bruno/pirat/REST/Neu anlegen/: Neuer Patient mit bereits existierender Email.yml  Neuer Patient.yml  folder.yml
extras/bruno/pirat/REST/Suche mit ID OAuth 2 patient/: folder.yml
extras/bruno/pirat/REST/Suche mit Suchparameter/: Alle Seite 2.yml  Alle.yml  Vorhandener Nachname Alice.yml  folder.yml
extras/bruno/pirat/REST/Ändern/: Patient 30 mit falscher Versionsnummer ändern.yml  Patient 30 mit ungültigen Daten ändern.yml  Patient 30 ohne Versionsnummer ändern.yml
extras/bruno/soldat/: opencollection.yml
extras/bruno/soldat/GraphQL/Mutation/: Neuer Soldat mit ungültigen Daten.yml  Neuer Soldat.yml
extras/bruno/soldat/GraphQL/Query/: Suche id, version, ... von Patienten mit Nachnamen.yml  Suche id, version, nachname, ... von allen Patienten.yml  Suche mit nicht-vorhandenem Nachnamen.yml  Suche nachname von einem Patienten mit nicht-vorhandener ID 999999.yml  Suche nachname, email, ... vom Patienten mit ID 20.yml  folder.yml
extras/bruno/soldat/REST/Löschen/: Patient 50 löschen.yml  folder.yml
extras/bruno/soldat/REST/Neu anlegen/: Neuer Patient mit ungültigen Daten.yml
extras/bruno/soldat/REST/Suche mit ID Bearer Token/: folder.yml
extras/bruno/soldat/REST/Ändern/: Nicht-vorhandener Patient 999999 ändern.yml  Patient 30 mit alter Versionsnummer ändern.yml  Patient 30 mit bereits existierender Emailadresse ändern.yml  Patient 30 ändern.yml  folder.yml
extras/bruno/soldat/environments/: patient.yml
extras/compose/backend/: compose.yml
extras/compose/postgres/init/soldat/csv/: ausruestung.csv  soldat.csv  verletzung.csv
extras/compose/postgres/init/soldat/sql/: create-db.sql  create-schema.sql
extras/compose/soldat/: compose.yml  soldat.csv
src/soldat/: __init__.py  __main__.py  asgi_server.py  fastapi_app.py
src/soldat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/soldat/config/: __init__.py  config.py  db.py  dev_modus.py  excel.py  graphql.py  keycloak.py  server.py  tls.py
src/soldat/config/dev/: db_populate.py  db_populate_router.py  keycloak_populate.py  keycloak_populate_router.py
src/soldat/config/resources/: app.toml
src/soldat/config/resources/postgresql/: create.sql  drop.sql
src/soldat/entity/: __init__.py  ausruestung.py  ausrüstung.py  geschlecht.py  rang.py  schweregrad.py  soldat.py  titan.py  verletzung.py  waffe.py
src/soldat/graphql/: __init__.py  graphql_types.py  schema.py
src/soldat/repository/: __init__.py  session_factory.py  soldat_repository.py
src/soldat/router/: __init__.py  ausruestung.py  ausruestung_model.py  constants.py  dependencies.py  health_router.py  page.py  soldat_model.py  soldat_router.py  soldat_update_model.py  soldat_write_router.py  verletzung_model.py
src/soldat/security/: __init__.py  auth_router.py  dependencies.py  exceptions.py  login_data.py  response_headers.py  role.py  roles_required.py  token_service.py  user.py  user_service.py
src/soldat/service/: __init__.py  ausruestung_dto.py  exceptions.py  soldat_dto.py  soldat_service.py  soldat_write_service.py  verletzung_dto.py
tests/integration/: common_test.py  simple_test.py
tests/integration/graphql/: conftest.py  mutation_test.py  query_test.py
tests/integration/rest/: conftest.py  delete_test.py  get_by_id_test.py  get_test.py  health_test.py  post_test.py  put_test.py
tests/integration/security/: login_test.py
tests/lasttest/: locustfile.py
